# Biorreacotr_interface

./: .gitignore  .qmlls.ini  BarraDisplaySensor.qml  BarraInputConfig.qml  BotonAccionVerde.qml  CLAUDE.md  CMakeLists.txt  CabeceraPersistente.qml  GraficaChart.qml  Main.qml  Main.qml.autosave  Pantalla6.qml  Pantalla7.qml  PantallaAjustes.qml  PantallaCarga.qml  PantallaConfigGraficas.qml  PantallaError.qml  PantallaExtraccion.qml  PantallaGuardarConfig.qml  PantallaLimpieza.qml  PantallaNuevoProyecto.qml  PantallaPostProceso.qml  PantallaPreparacion.qml  PantallaPrincipal.qml  PantallaProcesos.qml  PantallaProyectosGuardados.qml  PantallaRegistro.qml  PopupBorrarProyecto.qml  PopupConfirmarEdicion.qml  PopupConfirmarProceso.qml  PopupEdicionProyecto.qml  PopupIngresoNombre.qml  PopupOpcionesProyecto.qml  README.md  TarjetaProyecto.qml  TecladoNumerico.qml  TecladoQwerty.qml  appPrototipo_de.ts  appPrototipo_en.qm  appPrototipo_en.ts  (+24 more)
.claude/: settings.local.json
Sensores/RK50004_DO/RK50004_DO/: CMakeLists.txt  main.cpp  main.qml  sensordo.cpp  sensordo.h
Sensores/RK50012_pH/RK50012_pH/: CMakeLists.txt  main.cpp  main.qml  sensorph.cpp  sensorph.h
audio/: generar_sonidos.py
diagramas/: arquitectura.drawio  fsm_biorreactor.drawio
herramientas/: 2026-06-26_110851.csv  2026-06-26_113632.csv  2026-06-26_114538.csv  2026-06-26_133948.csv  2026-06-26_141544.csv  2026-06-26_142300.csv  2026-06-26_143653.csv  2026-06-26_153504.csv  2026-06-26_161604.csv  2026-06-26_163656.csv  2026-06-26_164706.csv  Control_pH_Difuso_Documentacion.docx  Registro_Pruebas_Completo.docx  Registro_Pruebas_Fundamental.docx  Tiempo de llenado prueba.csv  analizar_respuesta.py  calibrar_ph.py  caracterizar_nivel.py  caracterizar_ph.py  escalon_temperatura.py  escalón ph.csv  procedimiento_caracterizacion_nivel.md  protocolo_20260620_025404.csv  protocolo_20260620_132307.csv  prueba_control_ph.py  prueba_ph_20260618_174956.csv  prueba_total.py  simular_serial.py  test_dimmer.cpp  ~$gistro_Pruebas_Completo.docx
herramientas/datos_csv/: 2026-06-26_102105.csv  2026-06-26_125647.csv  2026-06-26_130707.csv  2026-06-26_140113.csv  2026-06-26_140143.csv  2026-06-26_145702.csv  2026-06-26_151814.csv  2026-06-26_162739.csv  Tiempo de llenado prueba.csv  escalón ph.csv  prueba_ph_20260618_174956.csv
qml/components/: BarraDisplaySensor.qml  BarraInputConfig.qml  BotonAccionVerde.qml  CabeceraPersistente.qml  GraficaChart.qml  TarjetaProyecto.qml  TecladoNumerico.qml  TecladoQwerty.qml
qml/popups/: PopupBorrarProyecto.qml  PopupConfirmarEdicion.qml  PopupConfirmarProceso.qml  PopupEdicionProyecto.qml  PopupIngresoNombre.qml  PopupOpcionesProyecto.qml
qml/screens/: Main.qml  Pantalla6.qml  Pantalla7.qml  PantallaAjustes.qml  PantallaCarga.qml  PantallaConfigGraficas.qml  PantallaError.qml  PantallaExtraccion.qml  PantallaGuardarConfig.qml  PantallaLimpieza.qml  PantallaNuevoProyecto.qml  PantallaPostProceso.qml  PantallaPreparacion.qml  PantallaPrincipal.qml  PantallaProcesos.qml  PantallaProyectosGuardados.qml  PantallaPruebaPH.qml  PantallaRegistro.qml
src/backend/: gestoraudio.h  gestorbiorreactor.cpp  gestorbiorreactor.h  translationmanager.cpp  translationmanager.h
src/controllers/: controladorfuzzy.cpp  controladorfuzzy.h  controladorhisteresis.cpp  controladorhisteresis.h  controladorpid.h
src/drivers/: driverpca9685.cpp  driverpca9685.h  driverxm125.cpp  driverxm125.h  raspberrypi_config.h
tests/: CMakeLists.txt  tst_fuzzy.cpp  tst_histeresis.cpp  tst_parseartrama.cpp  tst_pid.cpp
translations/: appPrototipo_de.qm  appPrototipo_de.ts  appPrototipo_en.ts  appPrototipo_fr.qm  appPrototipo_fr.ts  appPrototipo_ja.ts  appPrototipo_zh.ts
